--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -200,7 +200,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="5dp"
-                        android:layout_gravity="center"
+                        android:layout_gravity="left"
                         android:orientation="horizontal">
 
                         <TextView
@@ -214,7 +214,7 @@
 
                         <Spinner
                             android:id="@+id/organization_spinner"
-                            android:layout_width="189dp"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="@drawable/edit_text_rounded_corner"
@@ -226,23 +226,24 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="5dp"
-                        android:layout_gravity="center"
+                        android:layout_gravity="left"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Floor Number: "
+                            android:text="Visit Reason: "
                             android:textColor="@color/black"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:padding="6dp" />
 
                         <Spinner
-                            android:id="@+id/floor_spinner"
+                            android:id="@+id/visit_reason_spinner"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:layout_marginLeft="0dp"
                             android:background="@drawable/edit_text_rounded_corner"
                             android:padding="3dp"
                             android:paddingStart="0dp" />
