--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">sidar.us-east-2.elasticbeanstalk.com</domain>
+<!--        <domain includeSubdomains="true">sidar-development-env.ap-southeast-2.elasticbeanstalk.com</domain>-->
+        <domain includeSubdomains="true">localhost</domain>
+
     </domain-config>
 </network-security-config>
